# picotor

./: .clocignore  .gitignore  CMakeLists.txt  README.md
include/: bencode.hpp  common.hpp  httprequest.hpp  message.hpp  peer.hpp  result.hpp  sha1.hpp  torrent.hpp
misc/: archlinux-2023.02.01-x86_64.iso.torrent  response.bc
src/: common.cpp  main.cpp  message.cpp  peer.cpp  torrent.cpp
